5.0.6

FIXED
    - Un-break auto-quest tracking
    - Only show Hunter Mongoose bar when talented



5.0.5

NEW
    - Add ability to bind Keys by hover
    - Minimap can now be placed at top or bottom (CF#113)
    - Include Azerite item overlays in hero panel
	
LOCALIZATION
	- Simplified Chinese and Italian are now available, thanks to all of our volunteer translators from Curseforge!
	- All existing localizations updated with new strings.
    
FIXED
    - Fix quest tracker moving to bottom of screen sometimes (CF#195, CF#168)
    - Fix an actionbar overlapping issue (CF#37)
    - Fix some classpowerbar issues (colors and displaying) (CF#128)
    - Fix some issues with the Garrison-/Orderhall Minimapbutton (CF#13)
    - Fix problem where UI can disappear after vehicles, taxis, etc. (CF#200)
    - Default objective tracker placement improved when using custom minimap/actionbars
    - Fix Hunter MongooseBar



5.0.4

FIXED
    - Fix a Lua error that occurs when selecting equipment in hero panel (CF#183)
    - Properly hide multibars during pet battles
    - Error frame font now tied to font setting toggle (CF#196)
    - Fix a legacy map API issue in M+
    - Fix problem where UI can disappear after vehicles, taxis, etc. (CF#185, CF#193)

MISCELLANEOUS
    - Changed many strings to use default Blizz translations to simplify translation contributions



5.0.3

FIXED
    - More actionbar fixes (CF#169... I hope)
    - Allow shift-click to link spells and abilities in chat & macros
    - Fix problems with HUD movers when HUD is scaled
    - Handle API change in several class powers (CF#178)

MISCELLANEOUS
    - Disabled PvP HUD for now because of API changes (CF#173)



5.0.2

FIXED
   - Fix missing chi bar for windwalker monks (CF#170)
   - Fix flicker on comparison tooltips (CF#166)



5.0.1

FIXED
   - Zone transitions should not cause intermittent map errors (CF#162)
   - Resolve monk power bar problems (CF#161)