@@ -29,6 +29,7 @@ GW_DEFAULT["CLASS_POWER"] = true
 GW_DEFAULT["GROUP_FRAMES"] = true
 GW_DEFAULT["PETBAR_ENABLED"] = true
 GW_DEFAULT["PETBAR_LOCKED"] = true
+GW_DEFAULT["BORDER_ENABLED"] = true
 GW_DEFAULT["TOOLTIP_MOUSE"] = false
 
 GW_DEFAULT["BUTTON_ASSIGNMENTS"] = true
