@@ -10,13 +10,12 @@
         </Anchors>
         <Layers>
             <Layer level="ARTWORK">
-                <Texture name="$parentMenuBackDropHidden" file="Interface\AddOns\GW2_UI\textures\windowcorner">
+                <Texture parentArray="edgeTint" file="Interface\AddOns\GW2_UI\textures\windowcorner">
                     <Size x="512" y="256"></Size>
                     <Anchors>
                         <Anchor point="TOPLEFT" relativePoint="TOPLEFT" x="0" y="0" />
                     </Anchors>
                 </Texture>
-
                 <Texture name="$parentMenuBackDrop" file="Interface\AddOns\GW2_UI\textures\windowcornermenu" parentKey="Background">
                     <Size x="512" y="64"></Size>
                     <Anchors>
@@ -24,23 +23,21 @@
                     </Anchors>
                 </Texture>
 
-                <Texture name="$parentWindowTint" file="Interface\AddOns\GW2_UI\textures\windowcorner">
+                <Texture parentArray="edgeTint" file="Interface\AddOns\GW2_UI\textures\windowcorner">
                     <Size x="512" y="256"></Size>
                     <TexCoords left="1" right="0" top="0" bottom="1" />
                     <Anchors>
                         <Anchor point="TOPRIGHT" relativePoint="TOPRIGHT" x="0" y="0" />
                     </Anchors>
                 </Texture>
-
-                <Texture name="$parentWindowTint" file="Interface\AddOns\GW2_UI\textures\windowborder">
+                <Texture parentArray="edgeTint" file="Interface\AddOns\GW2_UI\textures\windowborder">
                     <Size x="512" y="256"></Size>
                     <Anchors>
                         <Anchor point="TOPLEFT" relativePoint="TOPLEFT" x="512" y="0" />
                         <Anchor point="TOPRIGHT" relativePoint="TOPRIGHT" x="-512" y="0" />
                     </Anchors>
                 </Texture>
-
-                <Texture name="$parentWindowTint" file="Interface\AddOns\GW2_UI\textures\windowborder-side">
+                <Texture parentArray="edgeTint" file="Interface\AddOns\GW2_UI\textures\windowborder-side">
                     <Size x="256" y="512"></Size>
                     <TexCoords left="0" right="1" top="1" bottom="0" />
                     <Anchors>
@@ -48,7 +45,7 @@
                         <Anchor point="BOTTOMRIGHT" relativePoint="BOTTOMRIGHT" x="0" y="0" />
                     </Anchors>
                 </Texture>
-                <Texture name="$parentWindowTint" file="Interface\AddOns\GW2_UI\textures\windowborder-side">
+                <Texture parentArray="edgeTint" file="Interface\AddOns\GW2_UI\textures\windowborder-side">
                     <Size x="256" y="512"></Size>
                     <TexCoords left="1" right="0" top="1" bottom="0" />
                     <Anchors>
@@ -56,25 +53,20 @@
                         <Anchor point="BOTTOMLEFT" relativePoint="BOTTOMLEFT" x="0" y="0" />
                     </Anchors>
                 </Texture>
-
             </Layer>
             <Layer level="BACKGROUND" textureSubLevel="5">
-                <Texture name="$parentWindowTint" file="Interface\AddOns\GW2_UI\textures\windowborder-bottom1" parentKey="Background">
+                <Texture parentArray="edgeTint" file="Interface\AddOns\GW2_UI\textures\windowborder-bottom1">
                     <Size x="1024" y="128"></Size>
-
                     <Anchors>
                         <Anchor point="BOTTOMLEFT" relativePoint="BOTTOMLEFT" x="0" y="14" />
                         <Anchor point="BOTTOMRIGHT" relativePoint="BOTTOM" x="" y="14" />
-
                     </Anchors>
                 </Texture>
-                <Texture name="$parentWindowTint" file="Interface\AddOns\GW2_UI\textures\windowborder-bottom1" parentKey="Background">
+                <Texture parentArray="edgeTint" file="Interface\AddOns\GW2_UI\textures\windowborder-bottom1">
                     <Size x="1024" y="128"></Size>
-
                     <Anchors>
                         <Anchor point="BOTTOMRIGHT" relativePoint="BOTTOMRIGHT" x="0" y="14" />
                         <Anchor point="BOTTOMLEFT" relativePoint="BOTTOM" x="" y="14" />
-
                     </Anchors>
                 </Texture>
             </Layer>
