@@ -1,5 +1,8 @@
 5.0.6
 
+NEW
+    - Add HUD option to toggle black edge borders (CF#197)
+
 FIXED
     - Un-break auto-quest tracking
     - Only show Hunter Mongoose bar when talented
